@@ -1,5 +1,8 @@
 ChangeLog
 =========
+dev
+    * Silenced errors while parsing metadata from cache and print files
+
 0.2.0alpha1
     * Improve automatic thumbnail and preview selection
     * `sl1s` added as sla extension gcode type
